--- a/yaml.html
+++ b/yaml.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-<p> What is a .yaml file? YAML stands for <i> YAML Ain't Markup Language</i> <br>
+<p> What is a .yaml file? YAML stands for <i> YAML Ain't Markup Language.</i> <br>
 It is often used for configuration files </p>
 </body>
 
