Changed some stuff

--- a/yaml.html
+++ b/yaml.html
@@ -5,7 +5,7 @@
 
 <body>
 <p> What is a .yaml file? YAML stands for <i> YAML Ain't Markup Language.</i> <br>
-It is often used for configuration files </p>
+It is often used for configuration files. This file was edited </p>
 </body>
 
 
